fixed button animation on small screens

--- a/src/assets/styles/Buttons.css
+++ b/src/assets/styles/Buttons.css
@@ -48,4 +48,15 @@ button.secondary {
         width: 130px;
         height: 48px;
     }
+
+    .heroBannerCTABlock button:active {
+        width: 117px;
+        height: 44px;
+        margin-right: 6.5px!important;
+        margin-left: 6.5px!important;
+        font-size: .88rem;
+    }
+    .heroBannerCTABlock button.primary:active {
+        margin-right: 24.5px!important;
+    }
 }
